# sorg

./: .gitignore  Cargo.toml  build.rs  readme.org  test.org
examples/: blog.org  other-post.org
examples/templates/: base.html  default.html  default_index.html  index.html
src/: args.rs  config.rs  context.rs  count_words.rs  folders.rs  footnotes.rs  helpers.rs  hotreloading.rs  macros.rs  main.rs  page.rs  render.rs  rss.rs  template.rs  tera.rs  tera_functions.rs
