[package]
name = "sorg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
color-eyre = "0.6.2"
orgize = { version = "0.9.0", features = ["syntect"] }
rand = "0.8.5"
serde = "1.0.144"
serde_derive = "1.0.144"
slugmin = "1.0.2"
tera = "1.15.0"
words-count = "0.1.5"
